# tree-sitter-oat

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-oat-v1.pc.in  tree-sitter-oat.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_oat/: __init__.py  binding.c
bindings/python/tree_sitter_oat_v1/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOat/: oat.h
bindings/swift/TreeSitterOatTests/: TreeSitterOatTests.swift
bindings/swift/TreeSitterOatV1/: oat_v1.h
bindings/swift/TreeSitterOatV1Tests/: TreeSitterOatV1Tests.swift
queries/oat/: highlights.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
